// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parameter builder should accept an object with records 1`] = `
Object {
  "searchParams": URLSearchParams {
    Symbol(query): Array [
      "goodsId",
      "100",
      "lang",
      "ru",
    ],
    Symbol(context): null,
  },
}
`;

exports[`parameter builder should return Options object with searchParam set to URLSearchParams object instance 1`] = `
Object {
  "searchParams": URLSearchParams {
    Symbol(query): Array [
      "goodsId",
      "100",
    ],
    Symbol(context): null,
  },
}
`;
